--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-  "id": "remotely-save",
-  "name": "Remotely Save",
+  "id": "remotely-save-fork",
+  "name": "Remotely Save Fork",
   "version": "0.5.24",
   "minAppVersion": "0.13.21",
   "description": "Yet another unofficial plugin allowing users to synchronize notes between local device and the cloud service.",
-  "author": "fyears",
-  "authorUrl": "https://github.com/fyears",
+  "author": "fyears-perkins",
+  "authorUrl": "https://github.com/andrewperkins",
   "isDesktopOnly": false,
   "fundingUrl": "https://remotelysave.com"
 }
