--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "version": "0.5.24",
   "minAppVersion": "0.13.21",
   "description": "Yet another unofficial plugin allowing users to synchronize notes between local device and the cloud service.",
-  "author": "fyears-perkins",
+  "author": "fyears-andrewperkins",
   "authorUrl": "https://github.com/andrewperkins",
   "isDesktopOnly": false,
   "fundingUrl": "https://remotelysave.com"
